# flecs-tower-defense

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
sokol/: sokol_gfx.h
src/: main.cpp
src/modules/flecs-components-cglm/: flecs_components_cglm.c  flecs_components_cglm.h
src/modules/flecs-components-geometry/: flecs_components_geometry.c  flecs_components_geometry.h
src/modules/flecs-components-graphics/: flecs_components_graphics.c  flecs_components_graphics.h
src/modules/flecs-components-gui/: flecs_components_gui.c  flecs_components_gui.h
src/modules/flecs-components-input/: flecs_components_input.c  flecs_components_input.h
src/modules/flecs-components-physics/: flecs_components_physics.c  flecs_components_physics.h
src/modules/flecs-components-transform/: flecs_components_transform.c  flecs_components_transform.h
src/modules/flecs-game/: camera_container.c  flecs_game.c  flecs_game.h  light_controller.c  world_cells.c
src/modules/flecs-systems-physics/: flecs_systems_physics.c  flecs_systems_physics.h  octree.c  octree.h  spatial_query.c  spatial_query.h
src/modules/flecs-systems-sokol/: atmosphere.c  depth.c  effect.c  effect.h  flecs_systems_sokol.c  flecs_systems_sokol.h  private_api.h  resources.c  resources.h  scene.c  screen.c  shader_loader.c  shadow.c  types.h
src/modules/flecs-systems-sokol/fx/: fog.c  fx.c  fx.h  hdr.c  ssao.c
src/modules/flecs-systems-sokol/modules/geometry/: geometry.c
src/modules/flecs-systems-sokol/modules/materials/: materials.c  materials.h
src/modules/flecs-systems-sokol/modules/renderer/: renderer.c  renderer.h
src/modules/flecs-systems-transform/: flecs_systems_transform.c  flecs_systems_transform.h
